--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,57 @@
-pandas
-numpy
-fastapi
-uvicorn
-streamlit
-plotly
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
+blinker==1.9.0
+cachetools==6.2.0
+certifi==2025.4.26
+charset-normalizer==3.4.3
+click==8.2.1
+colorama==0.4.6
+dnspython==2.7.0
+fastapi==0.115.12
+gitdb==4.0.12
+GitPython==3.1.45
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+iniconfig==2.1.0
+Jinja2==3.1.6
+jsonschema==4.25.1
+jsonschema-specifications==2025.4.1
+MarkupSafe==3.0.2
+narwhals==2.3.0
+numpy==2.3.2
+packaging==25.0
+pandas==2.3.2
+pillow==11.3.0
+plotly==6.3.0
+pluggy==1.5.0
+protobuf==6.32.0
+pyarrow==21.0.0
+pydantic==2.11.4
+pydantic_core==2.33.2
+pydeck==0.9.1
+pymongo==4.13.0
+pytest==8.3.5
+python-dateutil==2.9.0.post0
+pytz==2025.2
+referencing==0.36.2
+reportlab==4.4.3
+requests==2.32.5
+rpds-py==0.27.1
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+starlette==0.46.2
+streamlit==1.49.1
+tenacity==9.1.2
+toml==0.10.2
+tornado==6.5.2
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.5.0
+uvicorn==0.34.2
+watchdog==6.0.0
